--- a/index.html
+++ b/index.html
@@ -8173,7 +8173,7 @@ transform: translateY(-50%) rotateZ(180deg);
   <header class="header">
     <div class="logo-container">
       <div class="logo">
-        <img src="../images/Astrolite.png" alt="Company Logo">
+        <img src="./images/Astrolite.png" alt="Company Logo">
       </div>
       <span class="company-name">
         <span class="word-1">Astrolite</span>
@@ -8207,7 +8207,7 @@ transform: translateY(-50%) rotateZ(180deg);
   
       <div class="hero-circle-container animate-fade-right">
         <div class="hero-circle">
-          <img src="../images/first-section.webp" alt="Trading Dashboard" />
+          <img src="./images/first-section.webp" alt="Trading Dashboard" />
         </div>
       </div>
     </div>
@@ -8236,7 +8236,7 @@ transform: translateY(-50%) rotateZ(180deg);
       <div class="banner-lower-row">
         <!-- Left Image -->
         <div class="banner-image">
-          <img src="../images/trade-tools.jpg" alt="Trading Illustration" />
+          <img src="./images/trade-tools.jpg" alt="Trading Illustration" />
         </div>
   
         <!-- Right Cards -->
@@ -8269,21 +8269,21 @@ transform: translateY(-50%) rotateZ(180deg);
       <div class="feature-box">
         <h3>Use smart Newsfeed to make informed decisions</h3>
         <div class="feature-card">
-          <img src="../images/feature-desk2.webp" alt="Newsfeed UI" />
+          <img src="./images/feature-desk2.webp" alt="Newsfeed UI" />
         </div>
       </div>
   
       <div class="feature-box">
         <h3>Trade wisely by using a variety of Indicators</h3>
         <div class="feature-card">
-          <img src="../images/feature-desk1.png" alt="Indicators UI" />
+          <img src="./images/feature-desk1.png" alt="Indicators UI" />
         </div>
       </div>
   
       <div class="feature-box">
         <h3>Harness the power of a supportive community</h3>
         <div class="feature-card">
-          <img src="../images/feature-desk3.webp" alt="Community Chat UI" />
+          <img src="./images/feature-desk3.webp" alt="Community Chat UI" />
         </div>
       </div>
     </div>
@@ -8355,7 +8355,7 @@ transform: translateY(-50%) rotateZ(180deg);
       </div>
   
       <div class="mockup">
-        <img src="../images/ATS-phone2.png" alt="YourBrand App Mockup" />
+        <img src="./images/ATS-phone2.png" alt="YourBrand App Mockup" />
       </div>
     </div>
   </section>
@@ -8375,7 +8375,7 @@ transform: translateY(-50%) rotateZ(180deg);
           <p>I was initially worried about trading online, but Astrolite Tech Solutions made the process so simple and user-friendly. Their demo account helped me understand how everything works before I started trading with real money. The support team is quick to respond and incredibly helpful!</p>
           <div class="client-info">
             <div class="client-video">
-              <a href="#"><img src="../images/profile-1.jpg" alt=""></a>
+              <a href="#"><img src="./images/profile-1.jpg" alt=""></a>
             </div>
             <div class="client-details">
               <h6>Isabel Carter</h6>
@@ -8390,7 +8390,7 @@ transform: translateY(-50%) rotateZ(180deg);
           <p>Astrolite Tech Solutions has been a game-changer for me as a new trader. The platform is intuitive, and I love how I can practice with a demo account. Their customer support is professional and responds quickly to my queries, making me feel confident in my trading journey.</p>
           <div class="client-info">
             <div class="client-video">
-              <a href="#"><img src="../images/profile-2.jpg" alt=""></a>
+              <a href="#"><img src="./images/profile-2.jpg" alt=""></a>
             </div>
             <div class="client-details">
               <h6>Rahul Sharma</h6>
@@ -8405,7 +8405,7 @@ transform: translateY(-50%) rotateZ(180deg);
           <p>The platform provided by Astrolite Tech Solutions is perfect for someone like me who’s just starting out. The educational resources are top-notch, and the interface is easy to navigate. I’ve already recommended it to my friends looking to get into trading!</p>
           <div class="client-info">
             <div class="client-video">
-              <a href="#"><img src="../images/profile-3.jpg" alt=""></a>
+              <a href="#"><img src="./images/profile-3.jpg" alt=""></a>
             </div>
             <div class="client-details">
               <h6>Emily Watson</h6>
