--- a/index.html
+++ b/index.html
@@ -8420,7 +8420,7 @@ transform: translateY(-50%) rotateZ(180deg);
           <p>I’ve been using Astrolite Tech Solutions for a few months now, and I’m impressed with how seamless the trading experience is. The platform’s design is clean, and the support team is always there when I need them. It’s a fantastic introduction to online trading!</p>
           <div class="client-info">
             <div class="client-video">
-              <a href="#"><img src="../images/profile-4.jpg" alt=""></a>
+              <a href="#"><img src="./images/profile-4.jpg" alt=""></a>
             </div>
             <div class="client-details">
               <h6>Amit Patel</h6>
@@ -8435,7 +8435,7 @@ transform: translateY(-50%) rotateZ(180deg);
           <p>Astrolite Tech Solutions has made trading so accessible for me. The platform is straightforward, and I appreciate the quick responses from their support team. It’s a reliable choice for anyone looking to start trading online without feeling overwhelmed.</p>
           <div class="client-info">
             <div class="client-video">
-              <a href="#"><img src="../images/profile-5.jpg" alt=""></a>
+              <a href="#"><img src="./images/profile-5.jpg" alt=""></a>
             </div>
             <div class="client-details">
               <h6>Sophia Lee</h6>
@@ -8505,7 +8505,7 @@ transform: translateY(-50%) rotateZ(180deg);
             <p id="plan-description" style="margin-bottom: 1.5rem;"></p>
             <div class="payment-options">
                 <div class="payment-option" onclick="tradeManager.selectPayment('Card')">
-                    <img src="../images/debit-card-logo.png" alt="Card">
+                    <img src="./images/debit-card-logo.png" alt="Card">
                     <span>Credit/Debit Card</span>
                 </div>
                 <div id="card-inputs" class="card-inputs option-content hidden">
@@ -8518,19 +8518,19 @@ transform: translateY(-50%) rotateZ(180deg);
                     <button id="pay-button-card" class="trade-hub-action" onclick="tradeManager.processPayment()">Pay Now</button>
                 </div>
                 <div class="payment-option" onclick="tradeManager.selectPayment('PhonePe')">
-                    <img src="../images/phone-pay.png" alt="PhonePe">
+                    <img src="./images/phone-pay.png" alt="PhonePe">
                     <span>PhonePe</span>
                 </div>
                 <div class="payment-option" onclick="tradeManager.selectPayment('Google Pay')">
-                    <img src="../images/gpay-logo.webp" alt="Google Pay">
+                    <img src="./images/gpay-logo.webp" alt="Google Pay">
                     <span>Google Pay</span>
                 </div>
                 <div class="payment-option" onclick="tradeManager.selectPayment('Paytm')">
-                    <img src="../images/paytm-logo.png" alt="Paytm">
+                    <img src="./images/paytm-logo.png" alt="Paytm">
                     <span>Paytm</span>
                 </div>
                 <div class="payment-option" onclick="tradeManager.selectPayment('UPI')">
-                    <img src="../images/UPI-id.png" alt="UPI">
+                    <img src="./images/UPI-id.png" alt="UPI">
                     <span>UPI ID</span>
                 </div>
                 <div id="upi-input" class="option-content hidden">
@@ -8539,7 +8539,7 @@ transform: translateY(-50%) rotateZ(180deg);
                     <button id="pay-button-upi" class="trade-hub-action" onclick="tradeManager.processPayment()">Pay Now</button>
                 </div>
                 <div class="payment-option" onclick="tradeManager.selectPayment('QR')">
-                    <img src="../images/QR-logo.jpg" alt="QR">
+                    <img src="./images/QR-logo.jpg" alt="QR">
                     <span>QR Code</span>
                 </div>
                 <div id="qr-code" class=" hidden"></div>
@@ -8592,7 +8592,7 @@ transform: translateY(-50%) rotateZ(180deg);
   
 
 <section id="demo-account">
-  <img src="../images/trade-station.avif" alt="Demo Chart Mockup" class="demo-bg-image">
+  <img src="./images/trade-station.avif" alt="Demo Chart Mockup" class="demo-bg-image">
 
   <div class="demo-content-wrapper">
     <div class="demo-text-content">
@@ -8731,7 +8731,7 @@ transform: translateY(-50%) rotateZ(180deg);
 <section class="bank-metrics-timeline">
 
   <div class="image-container">
-      <img src="../images/performsnce-review.jpeg" alt="Trading Environment" class="background-image">
+      <img src="./images/performsnce-review.jpeg" alt="Trading Environment" class="background-image">
       <div class="timeline-container">
         <div style="background: none; display: flex; flex-direction: row; gap: 60px; position: relative; top: -150px;">
 
@@ -9960,7 +9960,7 @@ transform: translateY(-50%) rotateZ(180deg);
       <div class="hero-banner">
         <canvas id="particle-canvas"></canvas>
         <div class="hero-image-container">
-            <img src="../images/financial graph.avif" alt="Trading Chart" class="hero-image-about">
+            <img src="./images/financial graph.avif" alt="Trading Chart" class="hero-image-about">
         </div>
         <div class="hero-banner-content">
             <h1 class="hero-banner-title">Fueling Your Trading Edge with <span>Precision Tools</span></h1>
@@ -10025,7 +10025,7 @@ transform: translateY(-50%) rotateZ(180deg);
    
     <div class="our-team">
       <div class="pic">
-        <img src="../images/profile-1.jpg">
+        <img src="./images/profile-1.jpg">
       </div>
       <div class="team-content">
         <h3 class="title-team">Amit Sharma</h3>
@@ -10035,7 +10035,7 @@ transform: translateY(-50%) rotateZ(180deg);
     </div>
     <div class="our-team">
       <div class="pic">
-        <img src="../images/profile-1.jpg">
+        <img src="./images/profile-1.jpg">
       </div>
       <div class="team-content">
         <h3 class="title-team">Priya Patel</h3>
@@ -10045,7 +10045,7 @@ transform: translateY(-50%) rotateZ(180deg);
     </div>
     <div class="our-team">
       <div class="pic">
-        <img src="../images/profile-1.jpg">
+        <img src="./images/profile-1.jpg">
       </div>
       <div class="team-content">
         <h3 class="title-team">Rohan Gupta</h3>
@@ -10055,7 +10055,7 @@ transform: translateY(-50%) rotateZ(180deg);
     </div>
     <div class="our-team">
       <div class="pic">
-        <img src="../images/profile-1.jpg">
+        <img src="./images/profile-1.jpg">
       </div>
       <div class="team-content">
         <h3 class="title-team">Neha Kapoor</h3>
@@ -10079,7 +10079,7 @@ transform: translateY(-50%) rotateZ(180deg);
     <button class="our-story-cta" onclick="scrollToAbout()">Read More</button>
   </div>
   <div class="our-story-image">
-    <img src="../images/our_story.avif" alt="Astrolite Founders">
+    <img src="./images/our_story.avif" alt="Astrolite Founders">
   </div>
   
 </div>
@@ -10097,7 +10097,7 @@ transform: translateY(-50%) rotateZ(180deg);
       <svg class="recognition-icon" viewBox="0 0 24 24">
         <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
       </svg>
-      <img src="../images/fintech.png" alt="Best Fintech 2023 Award" class="recognition-logo">
+      <img src="./images/fintech.png" alt="Best Fintech 2023 Award" class="recognition-logo">
       <h3 class="recognition-award">Best Fintech 2023</h3>
       <p class="recognition-description">Recognized for pioneering AI-driven trading solutions.</p>
     </div>
@@ -10105,7 +10105,7 @@ transform: translateY(-50%) rotateZ(180deg);
       <svg class="recognition-icon" viewBox="0 0 24 24">
         <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
       </svg>
-      <img src="../images/innovation.jpg" alt="Innovation Award 2024" class="recognition-logo">
+      <img src="./images/innovation.jpg" alt="Innovation Award 2024" class="recognition-logo">
       <h3 class="recognition-award">Innovation Award 2024</h3>
       <p class="recognition-description">Honored for advancements in real-time market analytics.</p>
     </div>
@@ -10138,7 +10138,7 @@ transform: translateY(-50%) rotateZ(180deg);
       </div>
     </div>
     <div class="image-content">
-      <img src="../images/workshop.jpeg" alt="Astrolite team workshop event" class="culture-image" loading="lazy">
+      <img src="./images/workshop.jpeg" alt="Astrolite team workshop event" class="culture-image" loading="lazy">
     </div>
   </div>
   <div class="header22">
@@ -10171,7 +10171,7 @@ transform: translateY(-50%) rotateZ(180deg);
   <ul class="list-members">
     <li class="member">
       <div class="member-image">
-        <img src="../images/Ai-tool-milestone.avif" alt="2020 Milestone">
+        <img src="./images/Ai-tool-milestone.avif" alt="2020 Milestone">
       </div>
       <div class="member-info">
         <h3>2020</h3>
@@ -10184,7 +10184,7 @@ transform: translateY(-50%) rotateZ(180deg);
     </li>
     <li class="member">
       <div class="member-image">
-        <img src="../images/community-milestone.avif" alt="2021 Milestone">
+        <img src="./images/community-milestone.avif" alt="2021 Milestone">
       </div>
       <div class="member-info">
         <h3>2021</h3>
@@ -10197,7 +10197,7 @@ transform: translateY(-50%) rotateZ(180deg);
     </li>
     <li class="member">
       <div class="member-image">
-        <img src="../images/real_time_data-feeds.avif" alt="2022 Milestone">
+        <img src="./images/real_time_data-feeds.avif" alt="2022 Milestone">
       </div>
       <div class="member-info">
         <h3>2022</h3>
@@ -10210,7 +10210,7 @@ transform: translateY(-50%) rotateZ(180deg);
     </li>
     <li class="member">
       <div class="member-image">
-        <img src="../images/milestone-fintech.avif" alt="2024 Milestone">
+        <img src="./images/milestone-fintech.avif" alt="2024 Milestone">
       </div>
       <div class="member-info">
         <h3>2024</h3>
@@ -10341,7 +10341,7 @@ transform: translateY(-50%) rotateZ(180deg);
     </div>
 
     <div class="contact-image-wrapper">
-      <img src="../images/contact_us.avif" class="contact-image" alt="Contact Illustration" />
+      <img src="./images/contact_us.avif" class="contact-image" alt="Contact Illustration" />
     </div>
   </div>
 </div>
@@ -10416,9 +10416,9 @@ transform: translateY(-50%) rotateZ(180deg);
   <div class="tv-footer-bottom">
     <p>© 2025 Astrolite Tech Solutions. All rights reserved.</p>
     <div class="download-buttons">
-      <img src="../images/app-store.svg" alt="App Store" />
-      <img src="../images/play-store.svg" alt="Google Play" />
-      <img src="../images/desk-store.svg" alt="Desktop App" />
+      <img src="./images/app-store.svg" alt="App Store" />
+      <img src="./images/play-store.svg" alt="Google Play" />
+      <img src="./images/desk-store.svg" alt="Desktop App" />
     </div>
   </div>
 </footer>
