--- a/index.html
+++ b/index.html
@@ -10424,7 +10424,7 @@ transform: translateY(-50%) rotateZ(180deg);
 </footer>
 
 
-  <script src="../JS/home.js">
+  <script src="./JS/home.js">
 
      
   </script>
@@ -10454,7 +10454,7 @@ $(".testimonial-content").owlCarousel({
   </script>
 
 
-  <script src="../JS/gsap.js"></script>
+  <script src="./JS/gsap.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
 
 
@@ -11242,9 +11242,9 @@ document.querySelectorAll('.trade-hub-action1, .trade-hub-action2, .trade-hub-ac
 
 </script>
 
-<script src="../JS/Home_JS/home_validation_demo.js"></script>
-<script src="../JS/Home_JS/home_frontend_demo_integration"></script>
-<script src="../JS/Home_JS/home_connect_validation.js"></script>
+<script src="./JS/Home_JS/home_validation_demo.js"></script>
+<script src="./JS/Home_JS/home_frontend_demo_integration"></script>
+<script src="./JS/Home_JS/home_connect_validation.js"></script>
 
 </body>
 
